@@ -1,112 +1,96 @@
 package com.sena.schedule.service;
 
-import java.util.List;
-import java.util.Optional;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.stereotype.Service;
 import com.sena.schedule.DTO.patientDTO;
 import com.sena.schedule.DTO.responseDTO;
 import com.sena.schedule.model.patient;
 import com.sena.schedule.repository.IPatient;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class patientService {
 
     @Autowired
-    private IPatient data;
+    private IPatient patientRepo;
 
-    // Método para guardar un paciente con validaciones
-    public responseDTO save(patientDTO patientDTO) {
-        if (patientDTO.getName() == null || patientDTO.getName().trim().isEmpty()) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El nombre del paciente no puede estar vacío");
+    /**
+     * Guarda un nuevo paciente después de validar los datos básicos.
+     */
+    public responseDTO save(patientDTO dto) {
+        if (dto.getName() == null || dto.getName().isBlank() || dto.getEmail() == null || dto.getEmail().isBlank()) {
+            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "Datos del paciente incompletos");
         }
-
-        if (patientDTO.getName().length() < 3 || patientDTO.getName().length() > 50) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El nombre debe tener entre 3 y 50 caracteres");
+        if (patientRepo.existsByEmail(dto.getEmail())) {
+            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El correo ya está registrado");
         }
-
-        if (!isValidEmail(patientDTO.getEmail())) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El correo electrónico no tiene un formato válido");
-        }
-
-        if (data.existsByEmail(patientDTO.getEmail())) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El correo electrónico ya está registrado");
-        }
-
-        patient newPatient = convertToModel(patientDTO);
-        data.save(newPatient);
-
-        return new responseDTO(HttpStatus.OK.toString(), "Paciente registrado exitosamente");
+        patient p = convertToModel(dto);
+        patientRepo.save(p);
+        return new responseDTO(HttpStatus.OK.toString(), "Paciente creado correctamente");
     }
 
-    // Método para obtener todos los pacientes
-    public List<patient> findAll() {
-        return data.findAll();
+    /**
+     * Retorna la lista de todos los pacientes registrados como DTOs.
+     */
+    public List<patientDTO> findAll() {
+        return patientRepo.findAll()
+                .stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
-    // Método para buscar un paciente por ID
-    public Optional<patient> findById(int id) {
-        return data.findById(id);
+    /**
+     * Busca un paciente por su ID y lo retorna como DTO.
+     */
+    public Optional<patientDTO> findById(int id) {
+        return patientRepo.findById(id).map(this::convertToDTO);
     }
 
-    // Método para actualizar un paciente
-    public responseDTO update(int id, patientDTO patientDTO) {
-        Optional<patient> patientOpt = data.findById(id);
-        if (!patientOpt.isPresent()) {
-            return new responseDTO(HttpStatus.NOT_FOUND.toString(), "El paciente con ID " + id + " no existe");
-        }
-
-        if (patientDTO.getName() == null || patientDTO.getName().trim().isEmpty()) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El nombre del paciente no puede estar vacío");
-        }
-
-        if (patientDTO.getName().length() < 3 || patientDTO.getName().length() > 50) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El nombre debe tener entre 3 y 50 caracteres");
-        }
-
-        if (!isValidEmail(patientDTO.getEmail())) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El correo electrónico no tiene un formato válido");
-        }
-
-        // Verificar si el email ya existe (excepto para el paciente actual)
-        patient existingPatient = patientOpt.get();
-        if (!existingPatient.getEmail().equals(patientDTO.getEmail()) && 
-            data.existsByEmail(patientDTO.getEmail())) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El correo electrónico ya está registrado");
-        }
-
-        existingPatient.setName(patientDTO.getName());
-        existingPatient.setEmail(patientDTO.getEmail());
-        existingPatient.setNotificationPermission(patientDTO.isNotificationPermission());
-
-        data.save(existingPatient);
+    /**
+     * Actualiza los datos de un paciente existente.
+     */
+    public responseDTO update(int id, patientDTO dto) {
+        Optional<patient> opt = patientRepo.findById(id);
+        if (opt.isEmpty()) return new responseDTO(HttpStatus.NOT_FOUND.toString(), "Paciente no encontrado");
+        patient p = opt.get();
+        p.setName(dto.getName());
+        p.setEmail(dto.getEmail());
+        p.setNotificationPermission(dto.isNotificationPermission());
+        patientRepo.save(p);
         return new responseDTO(HttpStatus.OK.toString(), "Paciente actualizado correctamente");
     }
 
-    // Método para eliminar un paciente
+    /**
+     * Elimina un paciente por su ID.
+     */
     public responseDTO delete(int id) {
-        Optional<patient> patientOpt = data.findById(id);
-        if (!patientOpt.isPresent()) {
-            return new responseDTO(HttpStatus.BAD_REQUEST.toString(), "El paciente no existe");
-        }
-
-        data.deleteById(id);
+        if (!patientRepo.existsById(id)) return new responseDTO(HttpStatus.NOT_FOUND.toString(), "Paciente no existe");
+        patientRepo.deleteById(id);
         return new responseDTO(HttpStatus.OK.toString(), "Paciente eliminado correctamente");
     }
 
-    // Método para convertir DTO a Model
-    private patient convertToModel(patientDTO patientDTO) {
-        patient patient = new patient();
-        patient.setName(patientDTO.getName());
-        patient.setEmail(patientDTO.getEmail());
-        patient.setNotificationPermission(patientDTO.isNotificationPermission());
-        return patient;
+    /**
+     * Convierte un patientDTO a un modelo patient.
+     */
+    public patient convertToModel(patientDTO dto) {
+        patient p = new patient();
+        p.setName(dto.getName());
+        p.setEmail(dto.getEmail());
+        p.setNotificationPermission(dto.isNotificationPermission());
+        return p;
     }
 
-    // Método para validar email
-    private boolean isValidEmail(String email) {
-        String emailRegex = "^[a-zA-Z0-9_+&*-]+(?:\\.[a-zA-Z0-9_+&*-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-zA-Z]{2,7}$";
-        return email != null && email.matches(emailRegex);
+    /**
+     * Convierte un modelo patient a un DTO patientDTO.
+     */
+    public patientDTO convertToDTO(patient p) {
+        patientDTO dto = new patientDTO();
+        dto.setName(p.getName());
+        dto.setEmail(p.getEmail());
+        dto.setNotificationPermission(p.isNotificationPermission());
+        return dto;
     }
 }
